Update RegexCheck